--- a/src/main/webapp/css/people.less
+++ b/src/main/webapp/css/people.less
@@ -1,5 +1,6 @@
 @import "variables.less";
 @import "mixins.less";
+@import "grid.less";
 @import "reset.less";
 @import "type.less";
 @import "forms.less";
