--- a/src/main/webapp/css/people.less
+++ b/src/main/webapp/css/people.less
@@ -5,11 +5,18 @@
 @import "type.less";
 @import "forms.less";
 @import "tables.less";
+@import "labels.less";
 
 #people {
   tbody#users, tbody#groups {
     td:hover, td.selected {
       background-color: @grayLighter;
+    }
+  }
+
+  .memberships {
+    li {
+      float: left;
     }
   }
 }
