--- a/src/main/webapp/css/people.less
+++ b/src/main/webapp/css/people.less
@@ -29,13 +29,11 @@
     .opacity(50);
   }
 
-  tbody#users, tbody#groups {
-    td:hover {
-      background-color: @grayUltraLight;
-    }
-    td.selected {
-      background-color: @grayLighter;
-    }
+  .user, .group {
+    padding: 8px;
+    line-height: @baseLineHeight;
+    text-align: left;
+    border-top: 1px solid #ddd;
   }
 
   .user {
@@ -50,7 +48,13 @@
       }
     }
   }
+
+  .user.selected {
+    background-color: @grayLighter;
+  }
+
   .user:hover {
+    background-color: @grayUltraLight;
     .checkable {
       display: inline;
     }
@@ -62,6 +66,15 @@
     }
   }
   
+  #groups {
+    .group:hover {
+      background-color: @grayUltraLight;
+    }
+    .group.selected {
+      background-color: @grayLighter;
+    }
+  }
+
   .remove-memberships {
     li {
       float: left;
@@ -102,8 +115,8 @@
     }
   }
 
-  tbody#groups {
-    h2:last-child {
+  .group {
+    h2:nth-last-child(2) {
       color: @grayLight;
     }
   }
