virtual user list with on demand lazy loading

--- a/src/main/webapp/css/people.less
+++ b/src/main/webapp/css/people.less
@@ -65,6 +65,11 @@
       display: none;
     }
   }
+
+  .scrollbox {
+    height:450px;
+    overflow:auto; overflow-x:hidden;
+  }
   
   #groups {
     .group:hover {
@@ -116,7 +121,7 @@
   }
 
   .group {
-    h2:nth-last-child(2) {
+    h3:nth-last-child(2) {
       color: @grayLight;
     }
   }
