--- a/src/main/webapp/css/people.less
+++ b/src/main/webapp/css/people.less
@@ -8,6 +8,10 @@
 @import "labels.less";
 @import "sprites.less";
 @import "layouts.less";
+@import "modals.less";
+@import "utilities.less";
+@import "close.less";
+@import "buttons.less";
 
 //
 @grayUltraLight: #f5f5f5;
